--- a/index.html
+++ b/index.html
@@ -9,27 +9,31 @@
 	<link href="https://fonts.googleapis.com/css?family=Karla:300,300i,400,700,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="styles.css" rel="stylesheet">
+
+	<script src="js/p5.js"></script>
+	<script src="js/p5.dom.js"></script>
+	<script src="js/p5.vr.js"></script>
 </head>
 
 <body>
+
+
 	<div id="container">
 		<header class="container">
 			<h1 class="index">GENDER CONSTELLATIONS</h1>
-			<p class="index">Re-make, re-exist, re-invent your gender.</p>
+			<p class="index">"Gender isn't a spectrum, it's more of a constellation".</p>
 		</header>
-
 		<form class="container">
 			<a class="btn" href="intro.html" id="enterbtn">enter</a>
 		</form>
-		<canvas id="canvas" width="1417" height="859" style="width:100%;height:100%"></canvas>
+		<script src="js/starmap.js"></script>
 	</div>
+
 
 	<footer>
 		<a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
 		<a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
 	</footer>
-
-	<script src="starmap.js"></script>
 
 </body>
 
